--- a/machine.html
+++ b/machine.html
@@ -152,7 +152,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -173,7 +173,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -185,7 +185,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -249,7 +249,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Head-of-Product--Machine-Learning-Platform_JR0010571'>Head of Product, Machine Learning Platform</a></h5> 
+<h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Head-of-Product--Machine-Learning-Platform_JR0010571'>Head of Product, Machine Learning Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... BSc, MSc or PhD in Computer Science, Statistics, or comparable knowledge; 
 Prior strong expertise and experience in machine learning and data science?...</p>
@@ -262,16 +262,16 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
+<h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -308,7 +308,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/DEB330A0B9?viewed=true'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
+<h5><a href='https://mercari.workable.com/j/DEB330A0B9?viewed=true'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 ?? ... Apply online for the job of Software Engineer, Machine Learning [New Graduate 
 Position] at Mercari, inc.</p>
@@ -317,7 +317,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/759b5dfd-5ec7-493c-bc2c-0e29a54dffbc'>Labelbox - Machine Learning Developer Community Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/labelbox/759b5dfd-5ec7-493c-bc2c-0e29a54dffbc'>Labelbox - Machine Learning Developer Community Lead</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -399,7 +399,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rapidminer.workable.com/j/88EA6EA369'>RapidMiner - Jobs: Machine Learning Software Developer (Java) - Apply online</a></h5> 
+<h5><a href='https://rapidminer.workable.com/j/88EA6EA369'>RapidMiner - Jobs: Machine Learning Software Developer (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -460,7 +460,7 @@ learning models and improve existing ones to enhance our network detection?...</
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/2ece8233-3052-4734-b730-41625dfada42'>thredUP - Staff Machine Learning Engineer - Core Algorithms</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/2ece8233-3052-4734-b730-41625dfada42'>thredUP - Staff Machine Learning Engineer - Core Algorithms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
